--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vue-toast-notification": "^3.1.3"
